--- a/pre-push.sample
+++ b/pre-push.sample
@@ -7,7 +7,7 @@
 # This hook is called with the following parameters:
 #
 # $1 -- Name of the remote to which the push is being donedfdsfds
-# $2 -- URL to which the push is being done
+# $2 -- URL to which the push is being donedddd
 #
 # If pushing without using a named remote those arguments will be equal.
 #
