--- a/pre-push.sample
+++ b/pre-push.sample
@@ -31,7 +31,7 @@ do
 		# Handle delete
 		:
 	else
-		if test "$remote_oid" = "$zero"
+		if test "$remote_oid" = "$zero"dd
 		then
 			# New branch, examine all commits
 			range="$local_oid"
