--- a/pre-push.sample
+++ b/pre-push.sample
@@ -17,7 +17,7 @@
 #   <local ref> <local oid> <remote ref> <remote oid>
 #
 # This sample shows how to prevent push of commits where the log message starts
-# with "WIP" (work in progress).
+# with "WIP" (work in progress).sdfsdfs
 
 remote="$1"
 url="$2"
