--- a/pre-push.sample
+++ b/pre-push.sample
@@ -9,7 +9,7 @@
 # $1 -- Name of the remote to which the push is being donedfdsfdsa's'd'fa's'd
 # $2 -- URL to which the push is being donedddd
 #
-# If pushing without using a named remote those arguments will be equal.ssss
+# If pushing without using a named remote those arguments will be equal.ssssdsdfsdf
 #
 # Information about the commits which are being pushed is supplied as lines to
 # the standard input in the form:
