Fix typos in pre-push.sample comments
Corrected typos in comments regarding push parameters.

--- a/pre-push.sample
+++ b/pre-push.sample
@@ -7,7 +7,7 @@
 # This hook is called with the following parameters:
 #
 # $1 -- Name of the remote to which the push is being donedfdsfdsa's'd'fa's'd
-# $2 -- URL to which the push is being donedddd
+# $2 -- URL to which the push is being doneddddsfsdf
 #
 # If pushing without using a named remote those arguments will be equal.ssssdsdfsdf
 #
